--- a/doc/计划安排.md
+++ b/doc/计划安排.md
@@ -1,18 +1,18 @@
 1. 后端类图实现
 
 #service
-##user(4h)
-1. 用户注册
-2. 用户登录
+## store 商铺(4h)
+3. 商铺录入(新增) (完成)
+4. 商铺修改 (完成)
+1. 获取商铺列表 (完成)
 
 ##school(2h)
-1. 学校录入
-2. 学校修改
+1. 学校录入 (完成)
+2. 学校修改 (完成)
 
-## store 商铺(4h)
-3. 商铺录入(新增)
-4. 商铺修改
-1. 获取商铺列表
+##user(4h)
+1. 用户注册 (完成)
+2. 用户登录 (完成)
 
 ## ebike model(6h)
 5. 电动车型号录入
@@ -42,6 +42,15 @@
 3. 后端基本服务开发（50h）
 
 
+
+# 需求整理
+
+1. 用户开通闪充， 
+2. 用户报修
+3. 使用优惠劵
+
+# 关注点
+加入购物车，立即预约。。。
 
 ### 后端 设计见 backend README
 
