--- a/doc/计划安排.md
+++ b/doc/计划安排.md
@@ -52,6 +52,17 @@
 # 关注点
 加入购物车，立即预约。。。
 
+
+# 1. 商城
+## 1.1 卖电动车
+1. 获取列表
+2. 获取单个车型
+3. 用户提交订单
+4. 用户付押金
+5. 订单付款成功，根据用户分配店
+6. 实体店提车
+
+
 ### 后端 设计见 backend README
 
 
